--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "nwidart/commentmodule",
+    "name": "bialjumla/comment-module",
+    "type":"laravel-module",
     "description": "",
     "authors": [
         {
